--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@
 .card {
   @apply border-gray-300 bg-white p-4 rounded shadow-md;
 }
+
+
+.label {
+  @apply w-1/3 text-gray-700
+}
+
+.input {
+  @apply border border-gray-300 p-2 rounded w-2/3 focus:outline-none focus:border-blue-500
+}
+
