--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@
 
 
 .label {
-  @apply w-1/3 text-gray-700
+  @apply w-1/3 text-gray-700 m-auto 
 }
 
 .input {
-  @apply border border-gray-300 p-2 rounded w-2/3 focus:outline-none focus:border-blue-500
+  @apply border border-gray-300 p-2 rounded w-2/3 focus:outline-none focus:border-blue-500 m-auto
 }
 
